Initial scaffold for localization

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ markdown: kramdown
 
 title: Fortran Programming Language
 description: "Fortran Programming Language"
+languages: ["en"]
 
 news:
     name: Fortran Newsletter
@@ -14,6 +15,7 @@ news:
 url: "https://fortran-lang.org"
 
 plugins:
+  - jekyll-multiple-languages-plugin
 
 exclude:
     - CNAME
