Localize keywords and phrases in navigation bars and footers

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,5 +1,73 @@
-title: Fortran Programming Language
-description: "Fortran Programming Language"
+global:
+  title: Fortran Programming Language
+  description: "Fortran Programming Language"
+  discourse: Discourse
+  twitter: Twitter
+  github: GitHub
+  rss_feed: RSS feed
+  mailing_list: Mailing List
+  toggle_nav: Toggle navigation
+  site_preview: Site preview
+  site_preview_info: you are previewing unpublished changes for
+  pull_request: pull request
+  join_discourse: >-
+    Join the discussion about all things Fortran on the
+    <a href="https://fortran-lang.discourse.group" target="_blank">fortran-lang discourse.</a>
+  hosted_on_github: >-
+    This site's source is <a href="https://github.com/fortran-lang/fortran-lang.org/">hosted on GitHub</a>.
+  subscribe_to_mailing_list: >-
+    Subscribe to our <a href="https://groups.io/g/fortran-lang" target="_blank">mailing list</a>
+    to discuss anything Fortran related, announce Fortran projects, discuss development
+    of core fortran-lang.org projects (stdlib, fpm), and get
+    the latest news.
+
+nav:
+- title: Learn
+  url: /learn/
+- title: Compilers
+  url: /compilers/
+- title: Community
+  url: /community/
+- title: Packages
+  url: /packages/
+- title: News
+  url: /news/
+
+nav_key:
+  home: Home
+  learn: Learn
+  compilers: Compilers
+  community: Community
+  packages: Packages
+  news: News
+
+book:
+  authors: Authors
+  introduction: Introduction
+  back_to_learn: Back to Learn Fortran index
+  important: Important
+  note: Note
+  tip: Tip
+
+book_nav:
+  back: Back
+  next: Next
+
+news:
+  authors: Authors
+  back_to_news: Back to news
+  more: More
+
+packages:
+  featured: Featured Open Source Projects
+  tagline: A rich ecosystem of high-performance code
+  footer_text: >-
+    See
+    <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
+    <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
 
 langs:
   en: English
+  fr: French
+  de: German
+
