Localize leftover keywords

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -5,6 +5,9 @@ global:
   twitter: Twitter
   github: GitHub
   rss_feed: RSS feed
+  rss_client: >-
+    RSS clients can follow the
+    <a href="https://fortran-lang.org/news.xml" target="_blank">RSS feed</a>.
   mailing_list: Mailing List
   toggle_nav: Toggle navigation
   site_preview: Site preview
@@ -61,10 +64,24 @@ news:
 packages:
   featured: Featured Open Source Projects
   tagline: A rich ecosystem of high-performance code
+  back: Back to all Packages
+  fpm_registry: FPM Registry
+  fpm_projects: >-
+    Projects compatible with the
+    <a href="https://github.com/fortran-lang/fpm" target="_blank">
+    Fortran Package Manager</a>
+  fpm_footer_text: >-
+     See
+     <a href="https://github.com/fortran-lang/fpm-registry" target="_blank">
+     <i class="devicon-github-plain colored"></i> here</a> to find out more about the fpm registry
+     and how you can get your fpm compatible package listed.
   footer_text: >-
     See
     <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
     <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
+  tags: Tags
+  author: Author
+  maintainer: Maintainer
 
 langs:
   en: English
