Add interfacing and formatting packages

--- a/_data/package_index.yml
+++ b/_data/package_index.yml
@@ -205,6 +205,12 @@
   tags: deep-learning data-science machine-learning neural-networks
   version: none
 
+- name: flibcpp
+  github: swig-fortran/flibcpp
+  description: Fortran bindings to the C++ Standard Library
+  categories: interfaces
+  tags: c++
+
 # --- Compiler
 
 - name: hipfort
@@ -276,6 +282,49 @@
   tags: algorithmic derivative ad
   license: MIT
   version: 3.16-v2
+
+- name: camfort
+  github: camfort/camfort
+  description: Light-weight verification and transformation tools for Fortran
+  categories: programming
+  tags: refactoring
+  license: Apache-2.0
+
+- name: findent
+  url: https://sourceforge.net/projects/findent/
+  description: Indents/beautifies/converts Fortran sources
+  categories: programming
+  tags: formatter converter
+  license: BSD-3-Clause
+  version: 3.1.7
+
+- name: fprettify
+  github: pseewald/fprettify
+  description: auto-formatter for modern fortran source code
+  categories: programming
+  tags: formatter
+  license: GPL-3.0
+
+- name: shroud
+  github: LLNL/shroud
+  description: generate Fortran and Python wrappers for C and C++ libraries
+  categories: programming
+  tags: interface-generator c++
+
+- name: SWIG-Fortran
+  github: swig-fortran/swig
+  description: SWIG for C++ to Fortran interface generation
+  categories: programming
+  tags: interface-generator c++
+  license: GPL-3.0
+
+- name: f90wrap
+  github: jameskermode/f90wrap
+  description: F90 to Python interface generator with derived type support
+  categories: programming
+  tags: interface-generator python
+  license: GPL-3.0
+  version: none
 
 # --- Data types ---
 
