Add books to learning section
- Introduction to Computational Economics Using Fortran
- Fortran 2018 with Parallel Programming

--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -110,6 +110,14 @@ reference-books:
     location: Shelter Island, NY
     publisher: Manning Publications
 
+  - author: Fehr, H. and Kindermann, F.
+    year: 2020
+    title: "Introduction to Computational Economics Using Fortran"
+    url: https://www.ce-fortran.com/
+    edition: 1st ed
+    location: Oxford, UK
+    publisher: Oxford Universtiy Press
+
   - author: Markus, A.
     year: 2012
     title: "Modern Fortran in Practice"
@@ -117,7 +125,7 @@ reference-books:
     edition: 1st ed
     location: Cambridge, UK
     publisher: Cambridge University Press
-    
+
   - author: Chivers, I. and Sleightholme, J.
     year: 2018
     title: Introduction to Programming with Fortran
@@ -132,6 +140,13 @@ reference-books:
     edition: 4th ed
     location: New York
     publisher: McGraw-Hill Education
+
+  - author: Ray, S.
+    year: 2019
+    title: "Fortran 2018 with Parallel Programming"
+    url: https://www.routledge.com/Fortran-2018-with-Parallel-Programming/Ray/p/book/9780367218430
+    edition: 1st ed
+    publisher: Chapman and Hall/CRC
 
   - author: Brainerd, W. S.
     year: 2015
