Separate content from markup on the main page

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -24,6 +24,13 @@ global:
     of core fortran-lang.org projects (stdlib, fpm), and get
     the latest news.
 
+home:
+  tagline: High-performance parallel programming language
+  get_started: Get started
+  more: More
+  join_us: Join us!
+  make_fortran_better: Make Fortran better
+
 nav:
 - title: Learn
   url: /learn/
