Separate content from markup for other subpages as well

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -4,6 +4,8 @@ global:
   discourse: Discourse
   twitter: Twitter
   github: GitHub
+  documentation: Documentation
+  contributing: Contributing
   rss_feed: RSS feed
   rss_client: >-
     RSS clients can follow the
@@ -51,6 +53,15 @@ nav_key:
   packages: Packages
   news: News
 
+learn:
+  getting_started: Getting started
+  quickstart_tutorial: Quickstart tutorial
+  fortran_lang_discourse: Fortran-lang Discourse
+  minibook_tutorials: Mini-book Tutorials
+  other_resources: Other Resources
+  on_the_web: On the web
+  in_print: In print
+
 book:
   authors: Authors
   introduction: Introduction
@@ -64,9 +75,14 @@ book_nav:
   next: Next
 
 news:
+  archive: Archive
   authors: Authors
   back_to_news: Back to news
   more: More
+  read_more: Read more
+  see_archive: >-
+    See the
+    <a href="{{ site.baseurl }}/news/archive">news archive</a> for older posts
 
 packages:
   featured: Featured Open Source Projects
@@ -77,18 +93,16 @@ packages:
     Projects compatible with the
     <a href="https://github.com/fortran-lang/fpm" target="_blank">
     Fortran Package Manager</a>
-  fpm_footer_text: >-
-     See
-     <a href="https://github.com/fortran-lang/fpm-registry" target="_blank">
-     <i class="devicon-github-plain colored"></i> here</a> to find out more about the fpm registry
-     and how you can get your fpm compatible package listed.
-  footer_text: >-
-    See
-    <a href="https://github.com/fortran-lang/fortran-lang.org/blob/master/PACKAGES.md" target="_blank">
-    <i class="devicon-github-plain colored"></i> here</a> for how to get your project listed.
   tags: Tags
   author: Author
   maintainer: Maintainer
+  find_a_package: Find a Package
+  featured_topics: Featured topics
+  browse: Browse Packages by Category
+  search_for_a_project: Search for a project
+
+community:
+  header: Fortran-lang Community Projects
 
 langs:
   en: English
