Localize page titles

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ news:
 
 url: "https://fortran-lang.org"
 
+exclude_from_localizations: ["assets"]
+
 plugins:
   - jekyll-multiple-languages-plugin
 
