--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -26,6 +26,61 @@ global:
     of core fortran-lang.org projects (stdlib, fpm), and get
     the latest news.
 
+page:
+  home:
+    title: Home
+  learn:
+    title: Learn Fortran
+    description: Learning resources for beginners and experts alike
+  news:
+    title: News
+    archive:
+      title: News archive
+  compilers:
+    title: Fortran Compilers
+  community:
+    title: Fortran-lang Community
+    description: Collaboration for the advancement of Fortran
+  packages:
+    title: Fortran Packages
+    description: A rich ecosystem of high-performance code
+    search:
+      title: Search
+    category:
+      data-types:
+        title: Data types and containers
+        description: Libraries for advanced data types and container classes
+      examples:
+        title: Examples and templates
+        description: Demonstration codes and templates for Fortran
+      fpm:
+        title: FPM Registry Packages
+        description: Packages listed in the fpm-registry
+      graphics:
+        title: Graphics, plotting and user interfaces
+        description: Libraries for plotting data, handling images and generating user interfaces
+      interfaces:
+        title: Interface libraries
+        description: Libraries that interface with other systems, languages, or devices
+      numerical:
+        title: Numerical projects
+        description: Fortran libraries for linear algebra, optimization, root-finding etc.
+      programming:
+        title: Programming utilities
+        description: Error handling, logging, documentation and testing
+      scientific:
+        title: Scientific Codes
+        description: Applications and libraries for applied mathematical and scientific problems
+      strings:
+        title: Characters and strings
+        description: Libraries for manipulating characters and strings
+      io:
+        title: Input, output and parsing
+        description: Libraries for reading, writing and parsing files and inputs
+      libraries:
+        title: Libraries
+        description: Fortran libraries for general programming tasks
+
 home:
   tagline: High-performance parallel programming language
   get_started: Get started
@@ -108,4 +163,3 @@ langs:
   en: English
   fr: French
   de: German
-
