--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 
 title: Fortran Programming Language
 description: "Fortran Programming Language"
-languages: ["en", "fr"]
+languages: ["en", "es", `"fr"]
 
 news:
     name: Fortran Newsletter
