--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -43,7 +43,7 @@ books:
       - link: /learn/building_programs/distributing
 
   - title: Setting up your OS
-    description: How to setup a Fortran developement environment in Windows, Linux and macOS.
+    description: How to install a Fortran compiler set up a developement environment in Windows, Linux and macOS.
     category: Getting started
     link: /learn/os_setup
     pages:
